--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Image Finder</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-   
+    <div class="form-container">
+      <form class="search-form">
+        <input
+          class="search-input"
+          type="text"
+          name="search"
+          placeholder="Search image..."
+        />
+        <button class="search-btn" type="submit">Search</button>
+      </form>
+    </div>
+    <div class="list-container">
+      <span class="loader"></span>
+      <ul class="images-list"></ul>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
