refactor and load more functionality

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,14 @@
       </form>
     </div>
     <div class="list-container">
-      <span class="loader"></span>
       <ul class="images-list"></ul>
+    </div>
+    <div class="load-more-container">
+      <button class="load-more-btn" type="button">Load more...</button>
+      <span class="loader"></span>
+      <div class="info">
+        <p>We're sorry, but you've reached the end of search results.</p>
+      </div>
     </div>
     <script type="module" src="./main.js"></script>
   </body>
